--- a/en/equipe.html
+++ b/en/equipe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/navbar-banner.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/equipe.css" />
-    <title>Chaosmos - Notre Équipe</title>
+    <title>Chaosmos - Our Team</title>
   </head>
 
   <body>
@@ -22,18 +22,12 @@
           </a>
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
-              <a href="index.html" class="menu-item">Accueil</a>
-              <a href="index.html #programme" class="menu-item">Programme</a>
-              <a href="event2025.html" class="btn-register btn-item"
-                >Événement de 2025</a
-              >
-              <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
-              <a href="../en/equipe.html" class="menu-item">
-                <img
-                  src="../assets/images/uk.svg"
-                  alt="English"
-                  style="width: 20px; height: auto"
-                />
+              <a href="index.html" class="menu-item">Home</a>
+              <a href="index.html #programme" class="menu-item">Schedule</a>
+              <a href="event2025.html" class="btn-register btn-item">2025 Event</a>
+              <a href="equipe.html" class="btn-register btn-item">The Team</a>
+              <a href="../fr/equipe.html" class="menu-item">
+                <img src="../assets/images/fr.svg" alt="Français" style="width: 20px; height: auto" />
               </a>
             </div>
           </div>
@@ -47,10 +41,9 @@
       </nav>
 
       <div class="team-header container">
-        <h1>Notre équipe <span>Chaosmos</span></h1>
+        <h1>Our <span>Chaosmos</span> Team</h1>
         <p>
-          5 passionnés du cosmos réunis pour vous faire vivre une expérience
-          unique
+          5 cosmos enthusiasts united to offer you a unique experience
         </p>
       </div>
     </div>
@@ -59,27 +52,24 @@
     <section class="team-section">
       <div class="container">
         <div class="team-intro" id="contact">
-          <h2>Une équipe pluridisciplinaire</h2>
+          <h2>A Multidisciplinary Team</h2>
           <p>
-            Chacun apporte sa pierre à l'édifice pour créer un événement
-            inoubliable autour de l'univers et du cosmos.
+            Everyone contributes to building an unforgettable event about the universe and the cosmos.
           </p>
         </div>
 
         <div class="team-grid">
           <div class="team-member">
             <div class="member-image">
-              <img
-                src="../assets/images/zoubida2.jpg"
-                alt="Zoubida"
-              />
+              <img src="../assets/images/zoubida2.jpg" alt="Zoubida" />
             </div>
             <div class="member-info">
               <h3>Zoubida BENHABIB</h3>
-              <span class="role">cheffe de projet</span>
-              <p>Coordonne l'équipe et assure le suivi du projet, participe a d'autres tâches du projet. 
-                Elle a su avoir une vision globale et garder tout le monde aligné sur les objectifs. 
-                Grâce à elle, le projet a avancé de manière fluide et organisée.          
+              <span class="role">Project Manager</span>
+              <p>
+                Coordinates the team and oversees project progress, while also contributing to other tasks. 
+                She maintained a global vision and kept everyone aligned with the objectives. 
+                Thanks to her, the project advanced smoothly and in an organized way.
               </p>
               <div class="member-social">
                 <a href="https://www.linkedin.com/in/benhabib-zoubida/"><i class="fa-brands fa-linkedin"></i></a>
@@ -90,17 +80,15 @@
 
           <div class="team-member">
             <div class="member-image">
-              <img
-                src="../assets/images/janshica1.jpg"
-                alt="Janshica"
-              />
+              <img src="../assets/images/janshica1.jpg" alt="Janshica" />
             </div>
             <div class="member-info">
               <h3>Janshica CONSTANTINE</h3>
-              <span class="role">Responsable communication</span>
-              <p>S'est occupé de la rédaction	les contenus pour promouvoir l'exposition (site web, affiche...)
-                car elle maîtrise les stratégies de communication et sait comment capter l'attention du public. 
-                Ses textes ont permis de donner une bonne visibilité à l'événement.
+              <span class="role">Communication Manager</span>
+              <p>
+                Handled the writing of content to promote the exhibition (website, posters...).
+                She masters communication strategies and knows how to capture the public’s attention. 
+                Her texts gave great visibility to the event.
               </p>
               <div class="member-social">
                 <a href="https://www.linkedin.com/in/janshica-constantine-626ba133b/"><i class="fa-brands fa-linkedin"></i></a>
@@ -111,17 +99,15 @@
 
           <div class="team-member">
             <div class="member-image">
-              <img
-                src="../assets/images/sarah.jpg"
-                alt="Sarah"
-              />
+              <img src="../assets/images/sarah.jpg" alt="Sarah" />
             </div>
             <div class="member-info">
               <h3>Sarah AMMOUR</h3>
-              <span class="role">Responsable logistique</span>
-              <p>Va gérer l'organisation matérielle de l'exposition, vérifie que tout est en place.
-                Elle est méthodique et sait anticiper les besoins. 
-                Grâce à elle, tout sera prêt le jour J, ce qui évitera les imprévus.
+              <span class="role">Logistics Manager</span>
+              <p>
+                Manages the physical organization of the exhibition and ensures everything is in place.
+                She is methodical and anticipates needs. 
+                Thanks to her, everything will be ready on the big day, avoiding last-minute issues.
               </p>
               <div class="member-social">
                 <a href="https://www.linkedin.com/in/sarahammour/"><i class="fa-brands fa-linkedin"></i></a>
@@ -132,17 +118,15 @@
 
           <div class="team-member">
             <div class="member-image">
-              <img
-                src="../assets/images/floriane.jpg"
-                alt="Floriane"
-              />
+              <img src="../assets/images/floriane.jpg" alt="Floriane" />
             </div>
             <div class="member-info">
               <h3>Floriane MESLIN</h3>
-              <span class="role">Développeuse web</span>
-              <p>Construit et met en ligne le site de l'exposition.
-                Elle a les compétences techniques nécessaires. 
-                Son travail a permis de créer une plateforme fonctionnelle et attrayante pour présenter l'événement.
+              <span class="role">Web Developer</span>
+              <p>
+                Builds and publishes the exhibition website.
+                She has the necessary technical skills. 
+                Her work created a functional and attractive platform to present the event.
               </p>
               <div class="member-social">
                 <a href="https://www.linkedin.com/in/floriane-meslin-b6953932b/"><i class="fa-brands fa-linkedin"></i></a>
@@ -153,17 +137,15 @@
 
           <div class="team-member">
             <div class="member-image">
-              <img
-                src="../assets/images/hela.jpg"
-                alt="Hela"
-              />
+              <img src="../assets/images/hela.jpg" alt="Hela" />
             </div>
             <div class="member-info">
               <h3>Hela ADDAR</h3>
-              <span class="role">Responsable contenu</span>
-              <p>S'assure que tout le contenu de l'exposition (textes, interview,visuel...) est cohérent, pertinent.
-                Elle sait structurer les informations et garantir leur pertinence. 
-                Grâce à son travail, tous les textes, interviews et visuels ont été cohérents et bien intégrés.
+              <span class="role">Content Manager</span>
+              <p>
+                Ensures all content (texts, interviews, visuals...) is coherent and relevant.
+                She knows how to structure information and ensure consistency.
+                Thanks to her, all the content was well integrated and made sense together.
               </p>
               <div class="member-social">
                 <a href="https://www.linkedin.com/in/hela-addar-39953532b/"><i class="fa-brands fa-linkedin"></i></a>
@@ -178,38 +160,34 @@
     <!-- Values Section -->
     <section class="values-section">
       <div class="container">
-        <h2>Nos valeurs</h2>
+        <h2>Our Values</h2>
         <div class="values-grid">
           <div class="value-card">
             <i class="fa-solid fa-lightbulb"></i>
-            <h3>Curiosité</h3>
+            <h3>Curiosity</h3>
             <p>
-              Nous encourageons l'exploration et la découverte, en posant
-              toujours plus de questions sur notre univers.
+              We encourage exploration and discovery, always asking more questions about our universe.
             </p>
           </div>
           <div class="value-card">
             <i class="fa-solid fa-users"></i>
-            <h3>Accessibilité</h3>
+            <h3>Accessibility</h3>
             <p>
-              La science appartient à tous. Nous rendons les concepts complexes
-              accessibles sans les simplifier excessivement.
+              Science belongs to everyone. We make complex concepts understandable without oversimplifying them.
             </p>
           </div>
           <div class="value-card">
             <i class="fa-solid fa-seedling"></i>
             <h3>Innovation</h3>
             <p>
-              Nous explorons constamment de nouvelles approches pour partager
-              les merveilles des expositions.
+              We constantly explore new ways to share the wonders of the exhibition.
             </p>
           </div>
           <div class="value-card">
             <i class="fa-solid fa-handshake"></i>
             <h3>Collaboration</h3>
             <p>
-              Nous croyons en la puissance du travail d'équipe entre disciplines
-              pour créer des expériences uniques.
+              We believe in the power of interdisciplinary teamwork to create unique experiences.
             </p>
           </div>
         </div>
@@ -220,10 +198,10 @@
     <footer id="about">
       <div class="basfooter">
         <div class="piedviolet container">
-          <p class="titlepiedviolet">Contactez-nous pour plus d'informations</p>
-          <a href="equipe.html #contact"
-            ><button id="buttonviolet">Contactez-nous</button></a
-          >
+          <p class="titlepiedviolet">Contact us for more information</p>
+          <a href="equipe.html #contact">
+            <button id="buttonviolet">Contact Us</button>
+          </a>
         </div>
         <div class="pied container">
           <div class="gauche">
@@ -231,7 +209,7 @@
             <p id="copy">&copy; Copyright 2025</p>
           </div>
           <div class="droite">
-            <a href="#">Retour en haut</a>
+            <a href="#">Back to top</a>
           </div>
         </div>
       </div>
