--- a/en/jeu.html
+++ b/en/jeu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/navbar-banner.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/jeu.css" />
-    <title>Chaosmos - Jeu d'Orientation Cosmique</title>
+    <title>Chaosmos - Cosmic Scavenger Hunt</title>
   </head>
 
   <body>
@@ -22,18 +22,12 @@
           </a>
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
-              <a href="index.html" class="menu-item">Accueil</a>
-              <a href="index.html #programme" class="menu-item">Programme</a>
-              <a href="event2025.html" class="btn-register btn-item"
-                >Événement de 2025</a
-              >
-              <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
-              <a href="../en/jeu.html" class="menu-item">
-                <img
-                  src="../assets/images/uk.svg"
-                  alt="English"
-                  style="width: 20px; height: auto"
-                />
+              <a href="index.html" class="menu-item">Home</a>
+              <a href="index.html #programme" class="menu-item">Schedule</a>
+              <a href="event2025.html" class="btn-register btn-item">2025 Event</a>
+              <a href="equipe.html" class="btn-register btn-item">The Team</a>
+              <a href="../fr/jeu.html" class="menu-item">
+                <img src="../assets/images/fr.svg" alt="Français" style="width: 20px; height: auto" />
               </a>
             </div>
           </div>
@@ -47,10 +41,9 @@
       </nav>
 
       <div class="game-header container">
-        <h1>Jeu d'Orientation <span>Cosmique</span></h1>
+        <h1>Cosmic <span>Scavenger Hunt</span></h1>
         <p>
-          Résolvez les énigmes, explorez l'exposition et remportez des prix
-          exceptionnels
+          Solve puzzles, explore the exhibition, and win exceptional prizes
         </p>
       </div>
     </div>
@@ -59,13 +52,11 @@
     <section class="game-intro">
       <div class="container">
         <div class="intro-content">
-          <h2>Une aventure intellectuelle à travers le cosmos</h2>
+          <h2>An intellectual journey through the cosmos</h2>
           <p>
-            Participez à notre jeu d'orientation exclusif qui vous emmènera
-            d'une installation à l'autre. Stimulez votre esprit et votre
-            curiosité en résolvant des énigmes qui vous rapprochent des
-            mystères de l'univers et de la complexité de la nature humaine,
-            tout en vous offrant des surprises uniques !
+            Join our exclusive scavenger hunt that takes you from one installation to the next. 
+            Stimulate your mind and curiosity by solving riddles that bring you closer to the mysteries of the universe 
+            and the complexity of human nature, while enjoying unique surprises!
           </p>
         </div>
       </div>
@@ -74,15 +65,15 @@
     <!-- How to Play Section -->
     <section class="how-to-play">
       <div class="container">
-        <h2 class="section-title">Comment participer</h2>
+        <h2 class="section-title">How to participate</h2>
         <div class="steps-container">
           <div class="step-item">
             <div class="step-number">1</div>
             <div class="step-content">
-              <h3>Inscription</h3>
+              <h3>Registration</h3>
               <p>
-                Inscrivez-vous à l'accueil de l'exposition dès 10h pour recevoir votre première énigme. Premier arrivé, premier servi !
-                Les places seront limités !
+                Sign up at the exhibition reception from 10:00 AM to receive your first riddle. First come, first served! 
+                Spots are limited!
               </p>
             </div>
           </div>
@@ -90,10 +81,9 @@
           <div class="step-item">
             <div class="step-number">2</div>
             <div class="step-content">
-              <h3>Résolution d'énigmes</h3>
+              <h3>Solving Riddles</h3>
               <p>
-                Parcourez l'exposition à la recherche d'indices. Chaque
-                installation artistique cache une nouvelle énigme vers une autre et vous rapproche de la victoire.
+                Explore the exhibition for clues. Each artwork hides a riddle leading you to the next one and bringing you closer to victory.
               </p>
             </div>
           </div>
@@ -103,8 +93,7 @@
             <div class="step-content">
               <h3>Progression</h3>
               <p>
-                Résoudre une énigme vous conduit à l'installation suivante, où
-                une nouvelle énigme vous attend mais également un poinçon. Il nous faut des preuves !
+                Solving a riddle takes you to the next installation, where a new puzzle and a punch await. We need proof!
               </p>
             </div>
           </div>
@@ -112,10 +101,9 @@
           <div class="step-item">
             <div class="step-number">4</div>
             <div class="step-content">
-              <h3>Victoire</h3>
+              <h3>Victory</h3>
               <p>
-                Les participants qui résolvent toutes les énigmes dans le temps
-                imparti auront le plaisir de remporter des prix exclusifs faites par nos soins.
+                Participants who solve all riddles within the time limit will win exclusive prizes crafted especially for the event.
               </p>
             </div>
           </div>
@@ -129,42 +117,38 @@
         <div class="features-grid">
           <div class="feature-card">
             <i class="fa-solid fa-brain"></i>
-            <h3>Énigmes passionnantes</h3>
+            <h3>Exciting Riddles</h3>
             <p>
-              Des énigmes spécialement conçues pour tous les niveaux qui vous
-              feront réfléchir tout en vous immergant dans l'univers cosmique.
+              Specially designed puzzles for all levels that will challenge your mind while immersing you in the cosmic world.
             </p>
           </div>
 
           <div class="feature-card">
             <i class="fa-solid fa-clock"></i>
-            <h3>Course contre la montre</h3>
+            <h3>Race Against Time</h3>
             <p>
-              Vous disposez de 90 minutes pour résoudre toutes les énigmes et
-              compléter votre parcours.
+              You have 90 minutes to solve all the riddles and complete your journey.
             </p>
           </div>
 
           <div class="feature-card">
             <i class="fa-solid fa-gift"></i>
-            <h3>Cadeaux exclusifs</h3>
+            <h3>Exclusive Prizes</h3>
             <p>
-              Des récompenses uniques attendent les gagnants : chut, on ne vous en dit pas plus...
+              Unique rewards await the winners—shhh, it’s a surprise…
             </p>
           </div>
 
           <div class="feature-card">
             <i class="fa-solid fa-user-group"></i>
-            <h3>Expérience en équipe</h3>
+            <h3>Team Experience</h3>
             <p>
-              Participez en équipe de 2 à 5 personnes pour une
-              expérience collaborative et enrichissante.
+              Participate in teams of 2 to 5 people for a collaborative and enriching experience.
             </p>
           </div>
         </div>
       </div>
     </section>
-
 
     <!-- Registration Section -->
     <section class="registration">
@@ -177,24 +161,22 @@
             />
           </div>
           <div class="registration-info">
-            <h2>Places limitées !</h2>
+            <h2>Limited Spots!</h2>
             <p>
-              Pour assurer une expérience optimale, le nombre de participants
-              est limité à 20 équipes. Réservation à l'accueil ouverte de 10h à 10h20.
+              To ensure the best experience, the number of teams is limited to 20. Registration at the welcome desk from 10:00 to 10:20 AM.
             </p>
             <ul class="registration-details">
               <li>
-                <i class="fa-solid fa-calendar"></i> Dates : le 3 avril 2026 seulement
+                <i class="fa-solid fa-calendar"></i> Date: April 3, 2026 only
               </li>
               <li>
-                <i class="fa-solid fa-clock"></i> Sessions : 10h30 - 12h (90 minutes)
+                <i class="fa-solid fa-clock"></i> Sessions: 10:30 AM – 12:00 PM (90 minutes)
               </li>
               <li>
-                <i class="fa-solid fa-ticket"></i> Tarif : totalement gratuit
+                <i class="fa-solid fa-ticket"></i> Fee: completely free
               </li>
               <li>
-                <i class="fa-solid fa-users"></i> Participants : équipe
-                de 2 à 5 personnes
+                <i class="fa-solid fa-users"></i> Participants: teams of 2 to 5 people
               </li>
             </ul>
           </div>
@@ -206,10 +188,8 @@
     <footer id="about">
       <div class="basfooter">
         <div class="piedviolet container">
-          <p class="titlepiedviolet">Contactez-nous pour plus d'informations</p>
-          <a href="equipe.html #contact"
-            ><button id="buttonviolet">Contactez-nous</button></a
-          >
+          <p class="titlepiedviolet">Contact us for more information</p>
+          <a href="equipe.html #contact"><button id="buttonviolet">Contact Us</button></a>
         </div>
         <div class="pied container">
           <div class="gauche">
@@ -217,7 +197,7 @@
             <p id="copy">&copy; Copyright 2025</p>
           </div>
           <div class="droite">
-            <a href="#">Retour en haut</a>
+            <a href="#">Back to top</a>
           </div>
         </div>
       </div>
