--- a/fr/event2025.html
+++ b/fr/event2025.html
@@ -26,7 +26,7 @@
               <a href="index.html #programme" class="menu-item">Programme</a>
               <a href="event2025.html" class="btn-register btn-item">Événement de 2025</a>
               <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
-              <a href="../en/index.html" class="menu-item">
+              <a href="../en/event2025.html" class="menu-item">
                 <img
                   src="../assets/images/uk.svg"
                   alt="English"
@@ -77,10 +77,10 @@
               alt="Cosmos Exposition 1"
             />
             <div class="gallery-caption">
-              <h3>Nébuleuse de l'infini</h3>
+              <h3>Kongo Astronauts : Décoloniser le cosmos</h3>
               <p>
-                Installation interactive permettant d'explorer les nébuleuses
-                lointaines
+                Kongo Astronauts (Michel Ekeba et Eléonore Hellio) utilisent des déchets électroniques pour interroger l'avenir
+                de l'Afrique et dénoncer l'astrocapitalisme, appelant à une exploration spatiale plus juste et durable.
               </p>
             </div>
           </div>
@@ -91,24 +91,23 @@
               alt="Cosmos Exposition 2"
             />
             <div class="gallery-caption">
-              <h3>Contemplation stellaire</h3>
+              <h3>Materia Prima : contempler l’origine du monde</h3>
               <p>
-                Projection immersive de constellations rarement observables
-                depuis la Terre
+                Justine Bougèrol invite à plonger dans un abîme vertigineux, 
+                un espace suspendu entre le vide cosmique et la naissance de la Terre
               </p>
             </div>
           </div>
 
           <div class="gallery-item fade-in">
             <img
-              src="../assets/images/chaise2.jpg"
+              src="../assets/images/araignée.jpg"
               alt="Cosmos Exposition 3"
             />
             <div class="gallery-caption">
-              <h3>Symphonie céleste</h3>
+              <h3>L’Œil Arachnéen, Virginie Yassef, 2009</h3>
               <p>
-                Expérience audiovisuelle basée sur les ondes émises par les
-                étoiles
+                Une mygale géante, symbole de la peur et de l’écosystème, souligne la perception aiguë des araignées
               </p>
             </div>
           </div>
@@ -119,30 +118,31 @@
               alt="Cosmos Exposition 4"
             />
             <div class="gallery-caption">
-              <h3>Voyage interplanétaire</h3>
-              <p>Simulation de voyage à travers notre système solaire</p>
+              <h3>Mère trinité</h3>
+              <p>Tabita Rezaire célèbre, à travers des broderies éco-afroféministes, 
+                la connexion sacrée entre nature, spiritualité et héritages ancestraux.</p>
             </div>
           </div>
 
           <div class="gallery-item fade-in">
             <img
-              src="../assets/images/montagne.jpg"
+              src="../assets/images/tableau_noir.jpg"
               alt="Cosmos Exposition 5"
             />
             <div class="gallery-caption">
-              <h3>Trous noirs</h3>
-              <p>Visualisation des phénomènes gravitationnels extrêmes</p>
+              <h3>Black Liberation Zodiac (12th House Excerpt)</h3>
+              <p>Nolan Oswald Dennis réinvente les cartes célestes en y intégrant des symboles des luttes contre l’esclavage et le colonialisme.</p>
             </div>
           </div>
 
           <div class="gallery-item fade-in">
             <img
-              src="../assets/images/araignée.jpg"
+              src="../assets/images/chaise2.jpg"
               alt="Cosmos Exposition 6"
             />
             <div class="gallery-caption">
-              <h3>Aurores boréales</h3>
-              <p>Reproduction immersive des plus belles aurores boréales</p>
+              <h3>Maple Seed : le voyage cosmique d’une graine</h3>
+              <p>Porky Hefer nous plonge dans le voyage aérien de la graine d’érable, symbole de fertilité et de transformation des terres.</p>
             </div>
           </div>
         </div>
@@ -157,34 +157,30 @@
           <div class="features-grid">
             <div class="feature-item">
               <i class="fa-solid fa-vr-cardboard"></i>
-              <h3>Réalité virtuelle</h3>
+              <h3>Immersion cosmique</h3>
               <p>
-                Plongez dans l'univers grâce à nos installations de réalité
-                virtuelle de pointe
+                Des installations visuelles et sonores pour explorer l’univers
               </p>
             </div>
             <div class="feature-item">
               <i class="fa-solid fa-satellite"></i>
-              <h3>Données satellite en direct</h3>
+              <h3>Chaos et ordre</h3>
               <p>
-                Observez des phénomènes cosmiques en temps réel grâce à notre
-                partenariat avec l'ESA
+                Des œuvres illustrant l’équilibre entre désordre et harmonie
               </p>
             </div>
             <div class="feature-item">
               <i class="fa-solid fa-user-astronaut"></i>
-              <h3>Témoignages d'astronautes</h3>
+              <h3>Arts et sciences</h3>
               <p>
-                Rencontrez d'anciens astronautes qui partageront leur expérience
-                unique
+                Une approche mêlant astrophysique et création artistique
               </p>
             </div>
             <div class="feature-item">
               <i class="fa-solid fa-microscope"></i>
-              <h3>Laboratoire cosmique</h3>
+              <h3>Expériences uniques</h3>
               <p>
-                Participez à des expériences scientifiques ludiques et
-                éducatives
+                Visites interactives, dont parcours et énigmes
               </p>
             </div>
           </div>
