--- a/en/index.html
+++ b/en/index.html
@@ -206,7 +206,7 @@
           <p class="titlepiedviolet">
             Contact us for more information
           </p>
-          <a href="equipe.html #contact"><button id="buttonviolet">Contact Us</button></a>
+          <a href="equipe.html"><button id="buttonviolet">Contact Us</button></a>
         </div>
         <div class="pied container">
           <div class="gauche">
