contact et programme

--- a/en/equipe.html
+++ b/en/equipe.html
@@ -23,7 +23,7 @@
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
               <a href="index.html" class="menu-item">Home</a>
-              <a href="index.html #programme" class="menu-item">Schedule</a>
+              <a href="index.html#programme" class="menu-item">Schedule</a>
               <a href="event2025.html" class="btn-register btn-item">2025 Event</a>
               <a href="equipe.html" class="btn-register btn-item">The Team</a>
               <a href="../fr/equipe.html" class="menu-item">
@@ -199,6 +199,7 @@
       <div class="basfooter">
         <div class="piedviolet container">
           <p class="titlepiedviolet">Contact us for more information</p>
+          <a href="equipe.html#contact"><button id="buttonviolet">Contact Us</button></a>
         </div>
         <div class="pied container">
           <div class="gauche">
