--- a/fr/equipe.html
+++ b/fr/equipe.html
@@ -23,7 +23,7 @@
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
               <a href="index.html" class="menu-item">Accueil</a>
-              <a href="index.html #programme" class="menu-item">Programme</a>
+              <a href="index.html#programme" class="menu-item">Programme</a>
               <a href="event2025.html" class="btn-register btn-item"
                 >Événement de 2025</a
               >
@@ -221,6 +221,7 @@
       <div class="basfooter">
         <div class="piedviolet container">
           <p class="titlepiedviolet">Contactez-nous pour plus d'informations</p>
+          <a href="equipe.html#contact"><button id="buttonviolet">Contactez-nous</button></a>
         </div>
         <div class="pied container">
           <div class="gauche">
