--- a/fr/equipe.html
+++ b/fr/equipe.html
@@ -77,7 +77,7 @@
             <div class="member-info">
               <h3>Zoubida BENHABIB</h3>
               <span class="role">cheffe de projet</span>
-              <p>Coordonne l'équipe et assure le suivi du projet, participe a d'autres tâches du projet. 
+              <p>Coordonne l'équipe et assure le suivi du projet, participe aux autres tâches du projet. 
                 Elle a su avoir une vision globale et garder tout le monde aligné sur les objectifs. 
                 Grâce à elle, le projet a avancé de manière fluide et organisée.          
               </p>
@@ -98,7 +98,7 @@
             <div class="member-info">
               <h3>Janshica CONSTANTINE</h3>
               <span class="role">Responsable communication</span>
-              <p>S'est occupé de la rédaction	les contenus pour promouvoir l'exposition (site web, affiche...)
+              <p>S'est occupée de la rédaction	des contenus pour promouvoir l'exposition (site web, affiche...)
                 car elle maîtrise les stratégies de communication et sait comment capter l'attention du public. 
                 Ses textes ont permis de donner une bonne visibilité à l'événement.
               </p>
@@ -140,7 +140,7 @@
             <div class="member-info">
               <h3>Floriane MESLIN</h3>
               <span class="role">Développeuse web</span>
-              <p>Construit et met en ligne le site de l'exposition.
+              <p>Construis et mets en ligne le site de l'exposition.
                 Elle a les compétences techniques nécessaires. 
                 Son travail a permis de créer une plateforme fonctionnelle et attrayante pour présenter l'événement.
               </p>
@@ -161,7 +161,7 @@
             <div class="member-info">
               <h3>Hela ADDAR</h3>
               <span class="role">Responsable contenu</span>
-              <p>S'assure que tout le contenu de l'exposition (textes, interview,visuel...) est cohérent, pertinent.
+              <p>S'assure que tout le contenu de l'exposition (textes, interviews, visuel...) est cohérent, pertinent.
                 Elle sait structurer les informations et garantir leur pertinence. 
                 Grâce à son travail, tous les textes, interviews et visuels ont été cohérents et bien intégrés.
               </p>
